# flowdapt-nowcast-plugin

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
configs/: weather_data.yaml
flowdapt_nowcast_plugin/: __main__.py  api.py  python_driver.py  stages.py  utils.py
flowdapt_nowcast_plugin/configs/: main.yaml
flowdapt_nowcast_plugin/schedules/: feature_update.yaml
flowdapt_nowcast_plugin/workflows/: create_features.yaml  predict.yaml
schedules/: retrain.yaml
scripts/: python_driver.py  test_client.py
tests/: conftest.py  test_stages.py
triggers/: auto_predict.yaml
workflows/: train.yaml
