[tool.poetry]
name = "flowdapt_nowcast_plugin"
version = "0.1.0"
description = "An example plugin for Flowdapt that uses OpenMeteo data."
authors = ["Emergent Methods <contact@emergentmethods.ai>"]
license = "MIT"
readme = "README.md"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: System :: Distributed Computing',
    'Topic :: Utilities',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Environment :: Web Environment',
    'Topic :: Meteorological Data Collection and Analysis',
    'Topic :: Weather Forecasting',
    'Topic :: Climate Science',
]

[tool.poetry.plugins."flowdapt.plugins"]
flowdapt_nowcast_plugin = "flowdapt_nowcast_plugin"

[tool.poetry.dependencies]
python = "^3.11"
flowdapt = ">=0.1.0, <1.0.0"
flowml = ">=0.1.0"
openmeteo-py = "0.0.1"
datasieve = "^0.1.5"
geopy = "^2.3.0"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
coverage = "^7.2.7"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
log_cli = "True"
log_auto_indent = "False"

[tool.coverage.run]
source = ["flowdapt_nowcast_plugin"]

[tool.coverage.report]
ignore_errors = "true"

[tool.coverage.xml]
output = "coverage.xml"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
bump_message = "chore(release): Release $new_version"
